# neurosync-medical-device

./: .gitignore  .mcp.json  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile
neurosync/: __init__.py  cli.py
neurosync/analysis/: __init__.py  frequency_analysis.py  severity_scorer.py  trend_detector.py
neurosync/api/: __init__.py  server.py
neurosync/core/: alert_engine.py  models.py  patient_manager.py  tremor_analyzer.py
neurosync/devices/: __init__.py  calibration.py  data_pipeline.py  sensor_interface.py
neurosync/reporting/: __init__.py  clinical_report.py  compliance.py
neurosync/storage/: database.py
tests/: conftest.py  test_alert_engine.py  test_api.py  test_database.py  test_frequency_analysis.py  test_patient_manager.py  test_reporting.py  test_sensor.py  test_severity_scorer.py  test_tremor_analyzer.py
